# certifiable-bench

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTOR-LICENSE-AGREEMENT.md  Makefile  README.md  cleanup_stubs.sh
docs/: CB-MATH-001.md  CB-STRUCT-001.md
docs/requirements/: SRS-001-TIMER.md  SRS-002-METRICS.md  SRS-003-RUNNER.md  SRS-004-VERIFY.md  SRS-005-REPORT.md  SRS-006-PLATFORM.md
examples/: bench_inference.c
include/: cb_metrics.h  cb_platform.h  cb_report.h  cb_runner.h  cb_timer.h  cb_types.h  cb_verify.h
scripts/: bench.sh  build.sh  test.sh
src/metrics/: metrics.c
src/platform/: platform.c
src/report/: report.c
src/runner/: runner.c
src/timer/: timer.c
src/verify/: verify.c
tests/unit/: test_metrics.c  test_platform.c  test_report.c  test_runner.c  test_timer.c  test_verify.c
tools/: ci_regression.py  compare_platforms.py
